// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RunsAndArchive > renders archive page 1`] = `
<DocumentFragment>
  <div
    class="page_f1flacxk f1h5lfj6"
  >
    <div
      class="tabs_ff8rz57"
    >
      <div
        class="indicator_fp4eggn"
      />
      <span
        style="display: inline-block; min-width: 20px; width: 20px;"
      />
      <button
        class="MuiButtonBase-root-202 MuiButton-root-176 MuiButton-text-178 MuiButton-flat-181 button_ff2g68i"
        tabindex="0"
        title=""
        type="button"
      >
        <span
          class="MuiButton-label-177"
        >
          <span>
            Active
          </span>
        </span>
        <span
          class="MuiTouchRipple-root-318"
        />
      </button>
      <button
        class="MuiButtonBase-root-202 MuiButton-root-176 MuiButton-text-178 MuiButton-flat-181 button_ff2g68i active_fz0wpsl"
        tabindex="0"
        title=""
        type="button"
      >
        <span
          class="MuiButton-label-177"
        >
          <span>
            Archived
          </span>
        </span>
        <span
          class="MuiTouchRipple-root-318"
        />
      </button>
    </div>
    <div
      class="page_f1flacxk f9qqjqd"
    >
      <div>
        <div
          class="pageOverflowHidden_f15djeb2"
        >
          <div>
            <div
              class="MuiFormControl-root-205 filterBox_frxzdj2"
              spellcheck="false"
              style="height: 48px; max-width: 100%; width: 100%;"
            >
              <label
                class="MuiFormLabel-root-220 MuiInputLabel-root-209 noMargin_fl8qkup MuiInputLabel-formControl-214 MuiInputLabel-animated-217 MuiInputLabel-shrink-216 MuiInputLabel-outlined-219"
                data-shrink="true"
                for="tableFilterBox"
              >
                Filter runs
              </label>
              <div
                class="MuiInputBase-root-240 MuiOutlinedInput-root-227 noLeftPadding_f106pxd4 MuiInputBase-formControl-241 MuiInputBase-adornedStart-244 MuiOutlinedInput-adornedStart-230"
              >
                <fieldset
                  aria-hidden="true"
                  class="MuiPrivateNotchedOutline-root-257 MuiOutlinedInput-notchedOutline-234 filterBorderRadius_f1ypp5hy"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="MuiPrivateNotchedOutline-legend-258"
                    style="width: 0px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
                <div
                  class="MuiInputAdornment-root-259 MuiInputAdornment-positionEnd-262"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-264"
                    focusable="false"
                    role="presentation"
                    style="color: rgb(128, 134, 139); padding-right: 16px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input-250 MuiOutlinedInput-input-235 MuiInputBase-inputAdornedStart-255 MuiOutlinedInput-inputAdornedStart-238"
                  id="tableFilterBox"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="header_f15jqnss"
          >
            <div
              class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <span
                class="MuiButtonBase-root-202 MuiIconButton-root-283 MuiPrivateSwitchBase-root-279 MuiCheckbox-root-273 MuiCheckbox-colorPrimary-277"
              >
                <span
                  class="MuiIconButton-label-288"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-264"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input-282"
                    data-indeterminate="false"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root-318"
                />
              </span>
            </div>
            <div
              class="columnName_f1kdqshe"
              style="width: 25%;"
              title="Run name"
            >
              <span
                class="MuiButtonBase-root-202 MuiTableSortLabel-root-289 ellipsis_f15ay66x"
                role="button"
                tabindex="0"
                title="Sort"
              >
                Run name
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-264 MuiTableSortLabel-icon-291 MuiTableSortLabel-iconDirectionDesc-292"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName_f1kdqshe"
              style="width: 8.333333333333332%;"
              title="Status"
            >
              <span
                class="MuiButtonBase-root-202 MuiTableSortLabel-root-289 ellipsis_f15ay66x"
                role="button"
                tabindex="0"
                title="Cannot sort by this column"
              >
                Status
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-264 MuiTableSortLabel-icon-291 MuiTableSortLabel-iconDirectionDesc-292"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName_f1kdqshe"
              style="width: 8.333333333333332%;"
              title="Duration"
            >
              <span
                class="MuiButtonBase-root-202 MuiTableSortLabel-root-289 ellipsis_f15ay66x"
                role="button"
                tabindex="0"
                title="Cannot sort by this column"
              >
                Duration
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-264 MuiTableSortLabel-icon-291 MuiTableSortLabel-iconDirectionDesc-292"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName_f1kdqshe"
              style="width: 16.666666666666664%;"
              title="Experiment"
            >
              <span
                class="MuiButtonBase-root-202 MuiTableSortLabel-root-289 ellipsis_f15ay66x"
                role="button"
                tabindex="0"
                title="Cannot sort by this column"
              >
                Experiment
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-264 MuiTableSortLabel-icon-291 MuiTableSortLabel-iconDirectionDesc-292"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName_f1kdqshe"
              style="width: 16.666666666666664%;"
              title="Pipeline Version"
            >
              <span
                class="MuiButtonBase-root-202 MuiTableSortLabel-root-289 ellipsis_f15ay66x"
                role="button"
                tabindex="0"
                title="Cannot sort by this column"
              >
                Pipeline Version
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-264 MuiTableSortLabel-icon-291 MuiTableSortLabel-iconDirectionDesc-292"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName_f1kdqshe"
              style="width: 8.333333333333332%;"
              title="Recurring Run"
            >
              <span
                class="MuiButtonBase-root-202 MuiTableSortLabel-root-289 ellipsis_f15ay66x"
                role="button"
                tabindex="0"
                title="Cannot sort by this column"
              >
                Recurring Run
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-264 MuiTableSortLabel-icon-291 MuiTableSortLabel-iconDirectionDesc-292"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName_f1kdqshe"
              style="width: 16.666666666666664%;"
              title="Start time"
            >
              <span
                class="MuiButtonBase-root-202 MuiTableSortLabel-root-289 MuiTableSortLabel-active-290 ellipsis_f15ay66x"
                role="button"
                tabindex="0"
                title="Sort"
              >
                Start time
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-264 MuiTableSortLabel-icon-291 MuiTableSortLabel-iconDirectionDesc-292"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="scrollContainer_fea2b5v"
            style="min-height: 60px;"
          >
            <div
              class="busyOverlay_f1wbdc3s"
            />
            <div
              class="MuiCircularProgress-root-325 MuiCircularProgress-colorPrimary-328 MuiCircularProgress-indeterminate-327 absoluteCenter_f1g3o41t"
              role="progressbar"
              style="width: 25px; height: 25px; z-index: 2;"
            >
              <svg
                class="MuiCircularProgress-svg-330"
                viewBox="22 22 44 44"
              >
                <circle
                  class="MuiCircularProgress-circle-331 MuiCircularProgress-circleIndeterminate-333"
                  cx="44"
                  cy="44"
                  fill="none"
                  r="20.2"
                  stroke-width="3.6"
                />
              </svg>
            </div>
          </div>
          <div
            class="footer_f1fl9hjk"
          >
            <span
              class="fzbgmju"
            >
              Rows per page:
            </span>
            <div
              class="MuiFormControl-root-205 verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
            >
              <div
                class="MuiInputBase-root-240 MuiInput-root-301 MuiInputBase-formControl-241 MuiInput-formControl-302"
              >
                <div
                  class="MuiSelect-root-294"
                >
                  <div
                    aria-haspopup="true"
                    aria-pressed="false"
                    class="MuiSelect-select-295 MuiSelect-selectMenu-298 MuiInputBase-input-250 MuiInput-input-309"
                    role="button"
                    tabindex="0"
                  >
                    10
                  </div>
                  <input
                    type="hidden"
                    value="10"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-264 MuiSelect-icon-300"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <button
              class="MuiButtonBase-root-202 MuiButtonBase-disabled-203 MuiIconButton-root-283 MuiIconButton-disabled-287"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiIconButton-label-288"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-264"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
            </button>
            <button
              class="MuiButtonBase-root-202 MuiIconButton-root-283"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-288"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-264"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-318"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RunsAndArchive > renders runs page 1`] = `
<DocumentFragment>
  <div
    class="page_f1flacxk f1h5lfj6"
  >
    <div
      class="tabs_ff8rz57"
    >
      <div
        class="indicator_fp4eggn"
      />
      <span
        style="display: inline-block; min-width: 20px; width: 20px;"
      />
      <button
        class="MuiButtonBase-root-35 MuiButton-root-9 MuiButton-text-11 MuiButton-flat-14 button_ff2g68i active_fz0wpsl"
        tabindex="0"
        title=""
        type="button"
      >
        <span
          class="MuiButton-label-10"
        >
          <span>
            Active
          </span>
        </span>
        <span
          class="MuiTouchRipple-root-151"
        />
      </button>
      <button
        class="MuiButtonBase-root-35 MuiButton-root-9 MuiButton-text-11 MuiButton-flat-14 button_ff2g68i"
        tabindex="0"
        title=""
        type="button"
      >
        <span
          class="MuiButton-label-10"
        >
          <span>
            Archived
          </span>
        </span>
        <span
          class="MuiTouchRipple-root-151"
        />
      </button>
    </div>
    <div
      class="page_f1flacxk f9qqjqd"
    >
      <div>
        <div
          class="pageOverflowHidden_f15djeb2"
        >
          <div>
            <div
              class="MuiFormControl-root-38 filterBox_frxzdj2"
              spellcheck="false"
              style="height: 48px; max-width: 100%; width: 100%;"
            >
              <label
                class="MuiFormLabel-root-53 MuiInputLabel-root-42 noMargin_fl8qkup MuiInputLabel-formControl-47 MuiInputLabel-animated-50 MuiInputLabel-shrink-49 MuiInputLabel-outlined-52"
                data-shrink="true"
                for="tableFilterBox"
              >
                Filter runs
              </label>
              <div
                class="MuiInputBase-root-73 MuiOutlinedInput-root-60 noLeftPadding_f106pxd4 MuiInputBase-formControl-74 MuiInputBase-adornedStart-77 MuiOutlinedInput-adornedStart-63"
              >
                <fieldset
                  aria-hidden="true"
                  class="MuiPrivateNotchedOutline-root-90 MuiOutlinedInput-notchedOutline-67 filterBorderRadius_f1ypp5hy"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="MuiPrivateNotchedOutline-legend-91"
                    style="width: 0px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
                <div
                  class="MuiInputAdornment-root-92 MuiInputAdornment-positionEnd-95"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-97"
                    focusable="false"
                    role="presentation"
                    style="color: rgb(128, 134, 139); padding-right: 16px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input-83 MuiOutlinedInput-input-68 MuiInputBase-inputAdornedStart-88 MuiOutlinedInput-inputAdornedStart-71"
                  id="tableFilterBox"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="header_f15jqnss"
          >
            <div
              class="columnName_f1kdqshe cell_fy8nr2z selectionToggle_f1ds3nvo"
            >
              <span
                class="MuiButtonBase-root-35 MuiIconButton-root-116 MuiPrivateSwitchBase-root-112 MuiCheckbox-root-106 MuiCheckbox-colorPrimary-110"
              >
                <span
                  class="MuiIconButton-label-121"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-97"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <input
                    class="MuiPrivateSwitchBase-input-115"
                    data-indeterminate="false"
                    type="checkbox"
                    value=""
                  />
                </span>
                <span
                  class="MuiTouchRipple-root-151"
                />
              </span>
            </div>
            <div
              class="columnName_f1kdqshe"
              style="width: 25%;"
              title="Run name"
            >
              <span
                class="MuiButtonBase-root-35 MuiTableSortLabel-root-122 ellipsis_f15ay66x"
                role="button"
                tabindex="0"
                title="Sort"
              >
                Run name
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-97 MuiTableSortLabel-icon-124 MuiTableSortLabel-iconDirectionDesc-125"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName_f1kdqshe"
              style="width: 8.333333333333332%;"
              title="Status"
            >
              <span
                class="MuiButtonBase-root-35 MuiTableSortLabel-root-122 ellipsis_f15ay66x"
                role="button"
                tabindex="0"
                title="Cannot sort by this column"
              >
                Status
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-97 MuiTableSortLabel-icon-124 MuiTableSortLabel-iconDirectionDesc-125"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName_f1kdqshe"
              style="width: 8.333333333333332%;"
              title="Duration"
            >
              <span
                class="MuiButtonBase-root-35 MuiTableSortLabel-root-122 ellipsis_f15ay66x"
                role="button"
                tabindex="0"
                title="Cannot sort by this column"
              >
                Duration
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-97 MuiTableSortLabel-icon-124 MuiTableSortLabel-iconDirectionDesc-125"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName_f1kdqshe"
              style="width: 16.666666666666664%;"
              title="Experiment"
            >
              <span
                class="MuiButtonBase-root-35 MuiTableSortLabel-root-122 ellipsis_f15ay66x"
                role="button"
                tabindex="0"
                title="Cannot sort by this column"
              >
                Experiment
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-97 MuiTableSortLabel-icon-124 MuiTableSortLabel-iconDirectionDesc-125"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName_f1kdqshe"
              style="width: 16.666666666666664%;"
              title="Pipeline Version"
            >
              <span
                class="MuiButtonBase-root-35 MuiTableSortLabel-root-122 ellipsis_f15ay66x"
                role="button"
                tabindex="0"
                title="Cannot sort by this column"
              >
                Pipeline Version
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-97 MuiTableSortLabel-icon-124 MuiTableSortLabel-iconDirectionDesc-125"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName_f1kdqshe"
              style="width: 8.333333333333332%;"
              title="Recurring Run"
            >
              <span
                class="MuiButtonBase-root-35 MuiTableSortLabel-root-122 ellipsis_f15ay66x"
                role="button"
                tabindex="0"
                title="Cannot sort by this column"
              >
                Recurring Run
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-97 MuiTableSortLabel-icon-124 MuiTableSortLabel-iconDirectionDesc-125"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="columnName_f1kdqshe"
              style="width: 16.666666666666664%;"
              title="Start time"
            >
              <span
                class="MuiButtonBase-root-35 MuiTableSortLabel-root-122 MuiTableSortLabel-active-123 ellipsis_f15ay66x"
                role="button"
                tabindex="0"
                title="Sort"
              >
                Start time
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-97 MuiTableSortLabel-icon-124 MuiTableSortLabel-iconDirectionDesc-125"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="scrollContainer_fea2b5v"
            style="min-height: 60px;"
          >
            <div
              class="busyOverlay_f1wbdc3s"
            />
            <div
              class="MuiCircularProgress-root-158 MuiCircularProgress-colorPrimary-161 MuiCircularProgress-indeterminate-160 absoluteCenter_f1g3o41t"
              role="progressbar"
              style="width: 25px; height: 25px; z-index: 2;"
            >
              <svg
                class="MuiCircularProgress-svg-163"
                viewBox="22 22 44 44"
              >
                <circle
                  class="MuiCircularProgress-circle-164 MuiCircularProgress-circleIndeterminate-166"
                  cx="44"
                  cy="44"
                  fill="none"
                  r="20.2"
                  stroke-width="3.6"
                />
              </svg>
            </div>
          </div>
          <div
            class="footer_f1fl9hjk"
          >
            <span
              class="fzbgmju"
            >
              Rows per page:
            </span>
            <div
              class="MuiFormControl-root-38 verticalAlignInitial_fclh73n rowsPerPage_fvpkhlp"
            >
              <div
                class="MuiInputBase-root-73 MuiInput-root-134 MuiInputBase-formControl-74 MuiInput-formControl-135"
              >
                <div
                  class="MuiSelect-root-127"
                >
                  <div
                    aria-haspopup="true"
                    aria-pressed="false"
                    class="MuiSelect-select-128 MuiSelect-selectMenu-131 MuiInputBase-input-83 MuiInput-input-142"
                    role="button"
                    tabindex="0"
                  >
                    10
                  </div>
                  <input
                    type="hidden"
                    value="10"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-97 MuiSelect-icon-133"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <button
              class="MuiButtonBase-root-35 MuiButtonBase-disabled-36 MuiIconButton-root-116 MuiIconButton-disabled-120"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiIconButton-label-121"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-97"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
            </button>
            <button
              class="MuiButtonBase-root-35 MuiIconButton-root-116"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-121"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-97"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-151"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
